--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <title>Erich Wang</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <meta content="Peronal web of Erich Wang. Student of University of Toronto. TA of U of T " name="description"/>
+        <meta content="Personal web of Erich Wang. Student of University of Toronto. TA of U of T" name="description"/>
         <meta content="Erich Wang" name="author"/>
-        <meta content="Erich Wang,ErichWang, erich wang, erich, erich wang ta, U of T,University of Toronto," name="keywords"/>
+        <meta content="Erich Wang,ErichWang, erich wang, erich, erich wang ta, U of T,University of Toronto" name="keywords"/>
         <!-- GLOBAL MANDATORY STYLES -->
         <link href="http://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
         <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css"/>
